<resources>
    <string name="app_name">GradeOptimizer</string>
    <string name="task_title">Task Title</string>
    <string name="task_title_holder">Task Title Here</string>
    <string name="task_description">Task Description Here</string>
    <string name="start_timer_button">Start</string>
    <string name="stop_timer_button">Stop</string>
    <string name="reset_timer_button">Reset</string>
    <string name="skip_timer_button">Skip</string>
    <string name="new_task">New Task</string>
    <string name="task_already_completed">Task is already completed!</string>
    <string name="too_many_sessions">Reached the maximum recommended sessions for one day!</string>
    <string name="no_tasks">No Tasks In List</string>


</resources>
